2006-11-02 Sandro Santilli <strk@refractions.net>

	* source/headers/geos/geom/BinaryOp.h: disable debugging output
	  by default.
	* capi/geostest.c: updated to use the new GEOSGeometry typedef, so
	  to build w/out warnings and fully respecting current const
	  specification.
	* capi/geos_c.cpp, capi/geos_c.h.in: const-corrected and documented
	  GEOSPolygonize function.
	* capi/test.expected: updated expected version
	* capi/testrunner.sh: be happy with geostest running w/out
	  segfaulting, still run diff for reference.
	* configure.in: updated versions to 3.0.0rc2 / CAPI-1.3.0

2006-11-02 Markus Schaber <schabi@logix-tt.com>

	* capi/geos_c.h.in: add GEOSGeometry and GEOSCoordSequence
	  typedef, to unhide the pointer type and allow fine-grained
	  const specification, use the new typedefs in function signatures
	  (fix some const-specifications accordingly)
	* capi/geos_c.cpp: define GEOSGeometry and GEOSCoordSequence
	  for cross-checking of types in header.

2006-10-30 Markus Schaber <schabi@logix-tt.com>

	* capi/geos_c.cpp: more focused 'using' directives.
	* capi/geos_c.h.in: let the enum visible by geos_c.cpp
	  now that there are no more name clashes.

2006-10-30 Sandro Santilli <strk@refractions.net>

	* source/operation/overlay/OverlayOp.cpp: reduce
	  default verbosity.

2006-10-30 Markus Schaber <schabi@logix-tt.com>

	* capi/geos_c.cpp:
	  Remove a typedef which is also included via Header;
	  Use dynamic_cast instead of C cast in 2 cases to allow the
	  RTTI type check;
	  Replace "geoms" temp vector in polygonizer function with a loop,
	  this saves us at least one of the two vector copies;
	  Drop 2 unneded const_cast occurences;
	  Allow calling getNumGeometries against non-collections;
	  2 comment / whitespace cleanups.
	* capi/geos_c.h.in:
	  Added a comment explaining ou #ifndef magic;
	  Unified the two #ifndef into a single one.

2006-10-30 Sandro Santilli <strk@refractions.net>

	* capi/: test.expected, testrunner.sh, Makefile.am: